--- a/practice/ index.html
+++ b/practice/ index.html
@@ -13,7 +13,7 @@
             if (value1 != '') {
                 alert(value1);
             } else {
-               alert('Заполните поле ' + $('#firstName').attr('id') );
+                alert('Заполните поле ' + $('#firstName').attr('id') );
             }
             var value2 = $('#lastName').val();
             if (value2 != '') {
@@ -30,9 +30,24 @@
             return false;
         }
     </script>
+    <script>
+        function addRow() {
+            var count = document.getElementById('table').getElementsByTagName('tr').length;
+            const firstName = $('#firstName').val();
+            const lastName = $('#lastName').val();
+            var gender;
+            if(document.getElementById('gender_Male').checked) {
+                gender = $('#gender_Male').val();
+            } else if(document.getElementById('gender_Female').checked) {
+                gender = $('#gender_Female').val();
+            }
+            var textarea = $('#textarea').val();
+            $('#table tr:last').after('<tr> <th scope="col">'+ count +'</th><td>' + firstName +'</td><td>' + lastName +'</td><td>'
+                + gender  +'</td><td>' + textarea +'</td></tr>');
+        }
+    </script>
 </head>
 <body>
-
 <div class="container">
     <h1>My First Bootstrap Page</h1>
     <p>This is some text.</p>
@@ -47,14 +62,14 @@
         </div>
         <div class="form-group">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                <label class="form-check-label" for="gridRadios1">
+                <input class="form-check-input" type="radio" name="gender" id="gender_Male" value="Male" checked>
+                <label class="form-check-label" for="gender_Male">
                     Male
                 </label>
             </div>
             <div class="form-group">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                <label class="form-check-label" for="gridRadios2">
+                <input class="form-check-input" type="radio" name="gender" id="gender_Female" value="Female">
+                <label class="form-check-label" for="gender_Female">
                     Female
                 </label>
             </div>
@@ -67,7 +82,7 @@
         <button type="submit" class="btn btn-primary" onclick="return validate()">Send</button>
     </form>
     <br/>
-    <table class="table">
+    <table class="table" id="table">
         <thead>
         <tr>
             <th scope="col">#</th>
@@ -101,6 +116,7 @@
         </tr>
         </tbody>
     </table>
+    <button type="button" class="btn btn-default" onclick="addRow()">Add row</button>
 </div>
 </body>
 </html>
